fix: snow page overflow (#49)
* Revert "feat: Snow (#46)"

This reverts commit 5a7496937cc21f11a993e3d481e3aee2ff2c9819.

* fix: snow animation margin issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,8 +19,22 @@ body,
   }
 }
 
-img,
-svg {
-  transform: translate3d(0, 0, 0);
-  will-change: scroll-position, transform;
+/* Snow effect */
+.snowflake {
+  position: fixed;
+  top: -20px;
+  animation: fall linear infinite;
+}
+
+@keyframes fall {
+  from {
+    transform: translateY(0vh);
+    opacity: 0.9;
+    filter: blur(0px);
+  }
+  to {
+    transform: translateY(100vh);
+    opacity: 0;
+    filter: blur(8px);
+  }
 }
